This changelog shows an overview of what changed throughout VersionX releases, with the latest release or development log on top.

#27 Fix resolvers preventing proper uninstall
Clean up javascript to satisfy PhpStorm's JS validation.
Re-align form buttons and tiny bit of UI cleanup.
#31 Fix action bar and VersionX component in IE
#29 Fix issue with empty grids until applying a filter in 2.2.4.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-rc2      ++
++   Released on 2012-05-28   ++
++++++++++++++++++++++++++++++++
Add Recent Resource Changes dashboard widget for 2.2+.
Add Chunks UI to the component, and tabs to the update panel.
Change TV grid to follow same column order as others
Change object field behavior from searching on IP to searching on name
Add versions tab to template variable update screens.
#22 Make sure the cache gets cleared when reverting a resource.
#26 Fix critical issue handling static resources.
#24/#9 Added German translation (Thanks @exside!)
Fix "upd" message being logged to the error log.
Added Russian translation (Thanks Ivan Klimchuk!)

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-rc1      ++
++   Released on 2012-05-03   ++
++++++++++++++++++++++++++++++++
If TVs don't have a caption, make sure to fall back to its name.
Add status message on reverting a Resource.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev13     ++
++   Released on 2012-04-09   ++
++++++++++++++++++++++++++++++++
Add ability to toggle versioning of Resources or element types through system settings.
Add ability to revert Resources.
Add Dutch translation (Thanks @Engelbert!)
Add new "Template Variables" tab to component. (Thanks Adam!)
Prevent E_NOTICE errors on main controller.

++++++++++++++++++++++++++++++++
++   VersionX 2.0.0-dev12     ++
++   Released on 2012-04-03   ++
++++++++++++++++++++++++++++++++
Add new "Versions" tab to Templates panel.
Normalize/refactor process of adding tabs to non-component panels through the plugin. 